--- a/index.html
+++ b/index.html
@@ -555,6 +555,9 @@
         </li>
       </ul>
     </div>
+      <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
+       <script type="text/javascript" src="js/app.js"></script>
+      
   </body>
 </html>
 
